added scraper, added internal model, moved dbtypes, added sender
